# VecScale

./: .gitignore  CMakeLists.txt  readme.md  requirements.txt
configs/: default.json
include/vecscale/: aggregator.hpp  baselines.hpp  benchmark.hpp  common.hpp  compute.hpp  data.hpp  router.hpp  worker.hpp
results/: benchmark_report.txt
scripts/: prepare_dataset.py  run_demo.py
src/: aggregator.cpp  baselines.cpp  benchmark.cpp  compute.cpp  data.cpp  router.cpp  worker.cpp
src/vecscale/: __init__.py  aggregator.cpp  aggregator.hpp  aggregator.py  baselines.cpp  baselines.hpp  baselines.py  benchmark.cpp  benchmark.hpp  benchmark.py  compute.cpp  compute.hpp  compute.py  data.cpp  data.hpp  data.py  router.cpp  router.hpp  router.py  types.hpp  vecscale.hpp  worker.cpp  worker.hpp  worker.py
tools/: prepare_dataset.cpp  run_demo.cpp
